--- a/Xamarin.Helpers.csproj
+++ b/Xamarin.Helpers.csproj
@@ -44,6 +44,7 @@
     <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
     <Compile Include="Alert.cs" />
     <Compile Include="CssParser.cs" />
